--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.26",
+    "ai": "^6.0.78",
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
     "vue-router": "^5.0.2",
-    "ai": "^6.0.78",
-    "@ai-sdk/openai": "^3.0.26",
-    "zod": "^4.3.6",
-    "h3": "^2.0.1-rc.14"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@nuxt/devtools": "^3.1.1",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "typescript": "^5.9.3"
   },
   "author": "Your Name",
