--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.26",
     "ai": "^6.0.78",
+    "jszip": "^3.10.1",
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
     "vue-router": "^5.0.2",
