--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@nuxt/devtools": "^3.1.1",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@types/node": "^20.14.5",
     "typescript": "^5.9.3"
   },
   "author": "Your Name",
